--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,10 +164,23 @@ a {
 }
 
 .clients .images {
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 96px;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    padding: 0 42px;
+    height: 91px;
+    border-radius: 12px;
+    background: #fff;
+}
+
+.clients .images a:hover {
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 /* -----------------Guides------------------- */
