--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,14 +52,23 @@ a {
 }
 
 /* -----------------Header------------------- */
-.header {
+.fixed-header {
+    background-color: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
     background: #e6f0ff;
     height: 100vh;
 }
 
 .navbar {
-    padding-top: 38px;
+    /* padding-top: 38px; */
+    padding: 12px 0;
     display: flex;
     align-items: center;
 }
@@ -97,7 +106,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
