--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,9 +66,12 @@ a {
 }
 
 .hero-wrap {
+    display: flex;
     position: relative;
     background: #e6f0ff;
     height: calc(100vh - 90px);
+    justify-content: center;
+    flex-direction: column;
 }
 
 .navbar {
@@ -110,15 +113,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    padding-top: 130px;
-}
-
-.hero .info {
+.info {
     width: 51%;
 }
 
-.hero .sub-title {
+.sub-title {
     color: #687690;
     font-family: Poppins;
     font-size: 1.8rem;
@@ -127,7 +126,7 @@ a {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.title {
     margin-top: 8px;
     color: #000336;
     font-size: 6.4rem;
@@ -135,7 +134,7 @@ a {
     line-height: 1.19; /* 118.75% */
 }
 
-.hero .desc {
+.desc {
     margin-top: 30px;
     color: #5a6473;
     font-size: 1.8rem;
